--- a/src/components/style.css
+++ b/src/components/style.css
@@ -8,7 +8,7 @@
 
 .taskContainer {
     display: flex;
-    width: 50%;
+    width: fit-content;
     height: 10%;
     align-items: flex-start;
     justify-content: flex-start;
@@ -18,7 +18,7 @@
 
 .task {
     display: flex;
-    width: 70%;
+    width: 100%;
     height: 30px;
     align-items: flex-start;
     justify-content: flex-start;
@@ -28,7 +28,7 @@
     margin-left: 5px;
 }
 .titleTask {
-    margin-left: 5px;
+    margin-inline: 5px;
     color: #fff;
 }
 
